--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,19 @@
-<nav>
-  {% for item in site.data.navigation %}
-    <a href="{{ item.link }}" {% if page.url == item.link %} class="current" {% endif %}>
-      {{ item.name }}
-    </a>
-  {% endfor %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">New Horizon Global Inc</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" 
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      {% for item in site.data.navigation %}
+        <li class="nav-item {% if page.url == item.link %}active{% endif %}">
+          <a class="nav-link" href="{{ item.link }}">
+            {{ item.name | upcase }} {% if item.name | downcase == "home" %} <span class="sr-only">(current)</span> {% endif %}
+          </a>
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
 </nav>
