themed home page

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,7 @@
+body {
+  font-family: "proxima-nova";
+}
+
 .no-mp {
   margin: 0 !important;
   padding: 0 !important;
@@ -13,4 +17,9 @@
   &:hover {
     border-bottom: solid 3px rgba(139,184,234,1);
   }
+}
+
+p.capture {
+  font-size: 1.4rem;
+  margin-top: 2em;  
 }
