--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,7 +9,7 @@
     <ul class="navbar-nav ml-auto">
       {% for item in site.data.navigation %}
         <li class="nav-item {% if page.url == item.link %}active{% endif %}">
-          <a class="nav-link" href="{{ item.link }}">
+          <a class="nav-link" href="{{ site.baseurl }}{{ item.link }}">
             {{ item.name | upcase }} {% if item.name | downcase == "home" %} <span class="sr-only">(current)</span> {% endif %}
           </a>
         </li>
