--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -26,7 +26,7 @@ div.text-capture {
 }
 
 h3.heading {
-  font-family: arial;
+  font-family: "Arial";
   font-size: 1.6rem;
   font-weight: normal;
   color:rgba(0,0,0,0.8);
@@ -37,7 +37,7 @@ h3.heading {
 }
 
 h4.heading {
-  font-family: arial;
+  font-family: "Arial";
   font-size: 1.4rem;
   color:rgba(0,0,0,0.7);
   padding-top: 0.8em;
@@ -52,7 +52,7 @@ div.image-header {
 
 p.synopsis {
   margin-top: 0.5em;
-  font-family: Arial;
+  font-family: "Arial";
   font-size: 0.9em;
   color:rgba(0,0,0,0.7);
 }
