--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,6 +8,10 @@ body {
   padding: 0 !important;
 }
 
+.content-vspacing {
+  margin-top: 2em !important;
+}
+
 .banner {
   width: 100%;
   height: 350px;  
