fixed about content display

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,7 +9,7 @@ banner_title: Oil Field with Pump Jacks
   <div class="col-sm-3 no-mp">    
     {% include about_menu.html %}  
   </div>
-  <div class="col-sm-6 content-vspacing">
+  <div class="col-sm-6 content-vspacing about-content">    
     {{ content }}
   </div>
   <div class="col-sm-3 about-right-menu">
