--- a/_sass/about_menu.scss
+++ b/_sass/about_menu.scss
@@ -33,6 +33,13 @@
   }
 }
 
+.about-content {
+  p {
+    width: 80%;
+    margin: 0 auto 0 auto;
+  }  
+}
+
 .about-right-menu {
   border-left: solid 2px #f7f7f7;
   padding-left: 0.5em;
